/*
 * $Id: ChangeLog,v 1.505 2002/11/25 05:08:53 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-11-27 02:00 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
  * source\rdd\workarea.c
    ! Fixed hb_waRelEval() - When the current order is zero, relation works 
      by GOTO istead of SEEK, as Cl*pper does

2002-11-24 21:07 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/simplex.c
  * source/compiler/hbslex.c
  * source/compiler/harbour.slx
    ! Speed optimizations.

  * source/compiler/harbour.slx
    + Added support for IN as an Operator. Syntax is: <exp> IN <ArrayOrStringExp> => .T./.F.

  * source/vm/hvm.c
    + Added array support for HB_P_INSTRING.
    * Renamed hb_vmInString() to hb_vmInStringOrArray()

  + tests/testin.prg
    + New test for IN operator.

  /*
     NOTE: IN operator is about 25% faster than aScan(...) > 0
  */

2002-11-24 09:49 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbcomp.h
  * source/compiler/harbour.c
  * source/compiler/harbour.slx
  * source/compiler/harbour.sly
    * Changed all SET to refrences to ENUM.

  /*
    Corrected syntax is:

    ENUM[ERATION] <SetName> := <Member1> [, <MembersN>] ...

    LOCAL/STATIC <VarName> AS ENUM[ERATION] <SetName>

    <VarName> := <MemberX>

    This is still work in progress.
  */

2002-11-23 21:27 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbcomp.h
  * source/compiler/harbour.c
  * source/compiler/harbour.slx
  * source/compiler/harbour.sly
    + Added foundation for true Sets, compile time support.

  /*
    Syntax is:

    SET <SetName> := <Member1> [, <MembersN>] ...

    LOCAL/STATIC <VarName> AS SET <SetName>

    <VarName> := <MemberX>

    This is a work in progress. The above will parse correctly,
    but no compile time error will be produced for invalid assignments yet.
  */
